--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "regenerator-runtime": "^0.13.11",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3"
   }
 }
